user registration completed&tested

--- a/elastic.search/src/main/resources/application.properties
+++ b/elastic.search/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username          = root
 spring.session.jdbc.initialize-schema: always
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 
