--- a/elastic.search/src/main/resources/application.properties
+++ b/elastic.search/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
 
 
 
