--- a/elastic.search/src/main/resources/application.properties
+++ b/elastic.search/src/main/resources/application.properties
@@ -14,8 +14,11 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
 
-server.port = 8081
-spring.elasticsearch.jest.uris=http:localhost:9200
+server.port = 8083
+
+elasticsearch.url = localhost:9200
+
+
 
 
 
