match query done

--- a/elastic.search/src/main/resources/application.properties
+++ b/elastic.search/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username          = root
 spring.session.jdbc.initialize-schema: always
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.servlet.multipart.enabled=true
@@ -17,9 +17,5 @@ spring.servlet.multipart.max-request-size=15MB
 server.port = 8083
 
 elasticsearch.url = localhost:9200
-
-
-
-
-
+xpack.security.enabled: false
 
